[package]
name = "test_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["multipart"] }
futures = "0.3"
hound = "3.5.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whisper-rs = "0.11.1"

[build-dependencies]
cc = "1.1.21"
